# rust-crud-webserver

./: .env.sample  .gitignore  Cargo.toml  README.md
migrations/2025-12-04-170507-0000_init/: up.sql
migrations/2025-12-05-112232-0000_create_books/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/controllers/: books.rs
src/db/: models.rs
src/middlewares/: auth.rs  logger.rs
tests/: index.spec.ts  package-lock.json  package.json
