[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
dotenv = "0.15.0"
