[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
diesel = { version = "2.3.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
dotenvy = "0.15"
dotenv = "0.15.0"
r2d2 = "0.8.10"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
hyper = "1.8.1"
argon2 = "0.5.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand_core = { version = "0.9", features = ["os_rng"] }
password-hash = "0.5.0"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
